part2/2-01-connecting-pods/manifests/logger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger-writer-and-reader
  template:
    metadata:
      labels:
        app: logger-writer-and-reader
    spec:
      containers:
        - name: log-reader
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: jeknom/dowk-log-reader-app:0.3
        - name: log-writer
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: jeknom/dowk-log-writer-app:0.3
