part2/2-01-connecting-pods/manifests/logger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dowk-22-logger-app-svc
spec:
  type: ClusterIP
  selector:
    app: logger-writer-and-reader
  ports:
    - port: 2401
      protocol: TCP
      targetPort: 3000
