part2/2-01-connecting-pods/manifests/ping-pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
